// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components V1/Button Basic 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      כפתור
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Centered 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      כפתור
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Disabled 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11 MuiButton-disabled-15 MuiButtonBase-disabled-32"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      כפתור
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Full Width 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11 MuiButton-fullWidth-25"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      כפתור
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Loading 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11 MuiButton-disabled-15 MuiButtonBase-disabled-32"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      <div
        className="MuiCircularProgress-root-34 MuiCircularProgress-colorPrimary-38 MuiCircularProgress-indeterminate-36"
        role="progressbar"
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-40"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-41 MuiCircularProgress-circleIndeterminate-43"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Outlined Variant 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-outlined-7 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-outlinedPrimary-8"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      כפתור
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Template 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    />
  </button>
</div>
`;

exports[`Storyshots Components V1/Button Text Variant 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-textPrimary-5"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      כפתור
    </span>
  </button>
</div>
`;

exports[`Storyshots Components V1/Button With Icons 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-contained-10 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-containedPrimary-11"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      <span
        className="MuiButton-startIcon-26 MuiButton-iconSizeMedium-29"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root-34"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
          />
        </svg>
      </span>
      כפתור
      <span
        className="MuiButton-endIcon-27 MuiButton-iconSizeMedium-29"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root-34"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
